[gd_scene load_steps=6 format=3 uid="uid://ct3gmphscyclm"]

[ext_resource type="Script" uid="uid://fdcxx6w28kql" path="res://TamagotchiController.gd" id="1_qh4kf"]
[ext_resource type="Texture2D" uid="uid://s0aciggpfh38" path="res://new folder/ui.png" id="2_qh4kf"]
[ext_resource type="Texture2D" uid="uid://blvfdbpnx83dh" path="res://new folder/feedbutton.png" id="3_qh4kf"]
[ext_resource type="Texture2D" uid="uid://bggp5m7j1etsm" path="res://new folder/ovo 1.png" id="4_qh4kf"]
[ext_resource type="Texture2D" uid="uid://7acysrqj362" path="res://new folder/all sprites.png" id="5_13nh8"]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qh4kf")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(574.612, 323.032)
scale = Vector2(0.996816, 0.996816)
texture = ExtResource("2_qh4kf")

[node name="FeedButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 572.0
offset_top = 354.0
offset_right = 727.0
offset_bottom = 510.0
mouse_filter = 1
action_mode = 0
texture_normal = ExtResource("3_qh4kf")

[node name="HungerBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 713.0
offset_top = 121.0
offset_right = 984.0
offset_bottom = 157.0
fill_mode = 1

[node name="HappinessBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 712.0
offset_top = 269.0
offset_right = 983.0
offset_bottom = 305.0
mouse_filter = 1

[node name="PetSprite" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 22.0
offset_right = 540.0
offset_bottom = 495.0
texture_normal = ExtResource("4_qh4kf")
ignore_texture_size = true
stretch_mode = 0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = -33.0
offset_right = 654.0
offset_bottom = 200.0
icon = ExtResource("5_13nh8")
flat = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog"]
offset_left = 47.0
offset_top = 520.0
offset_right = 545.0
offset_bottom = 637.0

[node name="RichTextLabel" type="RichTextLabel" parent="AcceptDialog/VBoxContainer"]
layout_mode = 2
